fixed calendder width on mobile

--- a/style.css
+++ b/style.css
@@ -267,7 +267,6 @@ section:nth-child(2n + 1) {
         width: 100%;
         height: 75%;
         padding: 20px;
-        overflow: scroll;
     }
 
     #dashboard-container-mobile {
@@ -649,9 +648,9 @@ section:nth-child(2n + 1) {
     width: 17vw;
     height: 26vw;
 }
-     .small-container {
-       display: none;
-   }
+   /*  .small-container {*/
+   /*    display: none;*/
+   /*}*/
      .responsive-iframe-container {
    position: relative;
    padding-bottom: 56%;
@@ -676,9 +675,9 @@ section:nth-child(2n + 1) {
    height: 0;
    overflow: hidden;
 }
-   .big-container {
-       display: none;
-   }
+   /*.big-container {*/
+   /*    display: none;*/
+   /*}*/
     .nav-mobile {
         display: block;
         width: 100%;
@@ -1312,12 +1311,12 @@ section:nth-child(2n + 1) {
 
 #dash-back {
     width: 100%;
-    /*height: 90%;*/
+    height: 80%;
     display: flex;
     justify-content: center;
     border-radius: 1rem;
     padding: 20px;
-    overflow: auto;
+    overflow: scroll;
 }
 
 #dash-body {
